--- a/src/App.css
+++ b/src/App.css
@@ -234,14 +234,45 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 4rem;
-  background-color: #0077b6;
-  margin-top: 7px;
+  flex-direction: row;
+  gap: 10rem;
+  background-color: white;
+  padding-bottom: 6rem;
 }
 
 .heading {
   font-size: 3.5rem;
   text-align: center;
+}
+
+.about-img {
+  position: relative;
+  width: 25rem;
+  height: 25rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-img img {
+  width: 80%;
+  border-radius: 50%;
+  border: 0.2rem solid #00b4d8;
+}
+
+.about-img .circle-spin {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(0);
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border-top: 0.2rem solid white;
+  border-bottom: 0.2rem solid white;
+  border-left: 0.2rem solid #00b4d8;
+  border-right: 0.2rem solid #00b4d8;
 }
 
 .about-content h2 {
@@ -256,4 +287,78 @@ span {
 .about-content p {
   font-size: 1rem;
   margin: 2rem 0 3rem;
+}
+
+.servizi {
+  min-height: auto;
+  padding-bottom: 2rem;
+}
+
+.servizi h2 {
+  margin-bottom: 2rem;
+}
+
+.servizi .services-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.services-box {
+  flex: 1 1 20rem;
+  background-color: white;
+  padding: 3rem 2rem 4rem;
+  border-radius: 2rem;
+  box-shadow: 0 0.1rem 0.5rem #023e8a;
+  text-align: center;
+  border-top: 0.6rem solid #023e8a;
+  border-bottom: 0.6rem solid #023e8a;
+  transition: 0.5s ease;
+}
+
+.services-box:hover {
+  box-shadow: 0 0.1rem 2rem white;
+  transform: scale(1.02);
+}
+
+.services-container .icon-servizi {
+  font-size: 5rem;
+  color: #023e8a;
+}
+
+.services-container h3 {
+  font-size: 1.6rem;
+  transition: 0.5s ease;
+}
+
+.services-box:hover h3 {
+  color: #023e8a;
+}
+
+.services-container p {
+  font-size: 1rem;
+  margin: 1rem 0 3rem;
+}
+
+.btn-servizi {
+  text-decoration: none;
+  display: inline-block;
+  padding: 1rem 2.2rem;
+  background-color: #023e8a;
+  border-radius: 0.6rem;
+  box-shadow: 0 0.2rem 0.5rem #00b4d8;
+  font-size: 1.2rem;
+  color: #00b4d8;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  border: 0.2rem solid transparent;
+  transition: 0.5s ease;
+}
+
+.btn-servizi:hover {
+  background: transparent;
+  color: #00b4d8;
+  border-color: blue;
 }
