--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 }
 
 .Navbar.sticky.scrolled {
-  background-color: whitesmoke;
+  background-color: #023e8a;
   transition: background-color 0.3s ease transform 0.3s ease;
 }
 
@@ -42,12 +42,11 @@
 }
 
 .Navbar.sticky .Navbarlink a {
-  color: blue;
+  color: #03045e;
 }
 
 .Navbar.sticky .Navbarlink a.active {
-  color: #03045e;
-  /* border-bottom: 2px solid white; */
+  color: white;
 }
 
 .Navbarlink a.active::before {
@@ -57,7 +56,7 @@
   bottom: -6px;
   width: 100%;
   height: 0.2rem;
-  background: #03045e;
+  background: #00b4d8;
 }
 
 .darkMode {
@@ -72,7 +71,7 @@
 }
 
 .Navbar.sticky .darkMode {
-  color: blue;
+  color: #03045e;
 }
 
 section {
@@ -235,14 +234,14 @@ span {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  gap: 10rem;
+  gap: 8rem;
   background-color: white;
-  padding-bottom: 6rem;
-  padding-top: 5rem;
+  padding-bottom: 7rem;
+  padding-top: 4rem;
 }
 
 .heading {
-  font-size: 3.5rem;
+  font-size: 3rem;
   text-align: center;
 }
 
@@ -257,9 +256,9 @@ span {
 }
 
 .about-img img {
-  width: 80%;
+  width: 90%;
   border-radius: 50%;
-  border: 0.2rem solid #00b4d8;
+  border: 0.3rem solid #00b4d8;
 }
 
 .about-img .circle-spin {
@@ -270,24 +269,27 @@ span {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border-top: 0.2rem solid white;
-  border-bottom: 0.2rem solid white;
-  border-left: 0.2rem solid #00b4d8;
-  border-right: 0.2rem solid #00b4d8;
+  border-top: 0.6rem solid #03045e;
+  border-bottom: 0.6rem solid #03045e;
+  border-left: 0.2rem solid #0077b6;
+  border-right: 0.2rem solid #0077b6;
 }
 
 .about-content h2 {
   text-align: left;
-  line-height: 1.2;
+  line-height: 1.1;
 }
 
 .about-content h3 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  color: #0077b6;
 }
 
 .about-content p {
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin: 2rem 0 3rem;
+  color: #023e8a;
+  font-weight: 400;
 }
 
 .servizi {
@@ -304,7 +306,7 @@ span {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 3rem;
+  gap: 4rem;
 }
 
 .services-box {
@@ -373,8 +375,8 @@ span {
 .heading-progect {
   margin-top: 0px;
   margin-bottom: 0px;
-  font-size: 3.5rem;
-  text-align: start;
+  font-size: 3rem;
+  text-align: center;
 }
 
 .project h2 {
@@ -385,7 +387,7 @@ span {
   display: grid;
   grid-template-columns: repeat(3, 2fr);
   align-items: center;
-  gap: 2.5rem;
+  gap: 2rem;
 }
 
 .progetti-conteiner .progetti-box {
