--- a/src/App.css
+++ b/src/App.css
@@ -306,7 +306,7 @@ span {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 4rem;
+  gap: 5rem;
 }
 
 .services-box {
@@ -478,6 +478,39 @@ span {
   .progetti-conteiner .progetti-box {
     width: 100%;
   }
+}
+
+/* PARTE CONTATTI */
+.contact h2 {
+  margin-bottom: 1rem;
+}
+.contact form {
+  max-width: 50rem;
+  margin: 1rem auto;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.contact form .input-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact form .input-box input,
+.contact form textarea {
+  width: 70%;
+  padding: 1.5rem;
+  font-size: 1.2rem;
+  color: #023e8a;
+  background: white;
+  border-radius: 0.8rem;
+  margin: 0.7rem 0;
+  box-shadow: 0 0.1rem 0.5rem var(#0077b6);
+}
+
+.contact form .input-box input {
+  width: 40%;
 }
 
 /* PARTE CSS DEL FOOTER */
