--- a/src/App.css
+++ b/src/App.css
@@ -481,9 +481,12 @@ span {
 }
 
 /* PARTE CONTATTI */
+
 .contact h2 {
+  margin-top: 0;
   margin-bottom: 1rem;
 }
+
 .contact form {
   max-width: 50rem;
   margin: 1rem auto;
@@ -506,11 +509,45 @@ span {
   background: white;
   border-radius: 0.8rem;
   margin: 0.7rem 0;
-  box-shadow: 0 0.1rem 0.5rem var(#0077b6);
+  box-shadow: 0 0.1rem 0.5rem var(--shadow-color);
 }
 
 .contact form .input-box input {
-  width: 40%;
+  width: 42%;
+}
+
+.btn-contact {
+  text-decoration: none;
+  display: inline-block;
+  padding: 1.2rem 2.8rem;
+  background-color: #023e8a;
+  border-radius: 0.6rem;
+  box-shadow: 0 0.2rem 0.5rem #00b4d8;
+  font-size: 1.2rem;
+  color: #00b4d8;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  border: 0.2rem solid transparent;
+  transition: 0.5s ease;
+  margin-left: 580px;
+}
+
+.btn-contact:hover {
+  background: transparent;
+  color: #00b4d8;
+  border-color: blue;
+}
+
+@media screen and (max-width: 768px) {
+  .contact form .input-box input {
+    width: 100%;
+  }
+  .contact form textarea {
+    width: 200px;
+  }
+  .btn-contact {
+    margin-left: 150px;
+  }
 }
 
 /* PARTE CSS DEL FOOTER */
