--- a/src/App.css
+++ b/src/App.css
@@ -538,6 +538,34 @@ span {
   border-color: blue;
 }
 
+.torna-su {
+  text-decoration: none;
+  display: inline-block;
+  padding: 1.2rem 2.8rem;
+  background-color: #023e8a;
+  border-radius: 0.6rem;
+  box-shadow: 0 0.2rem 0.5rem #00b4d8;
+  font-size: 1.2rem;
+  color: #00b4d8;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  border: 0.2rem solid transparent;
+  transition: 0.5s ease;
+  margin-left: 1000px;
+  margin-top: 250px;
+  margin-left: 1250px;
+}
+
+.torna-su:hover {
+  background: transparent;
+  color: #00b4d8;
+  border-color: blue;
+}
+
+.arrow {
+  color: #00b4d8;
+}
+
 @media screen and (max-width: 768px) {
   .contact form .input-box input {
     width: 100%;
