--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 50px;
   padding: 1.5rem 7%;
   background: transparent;
   display: flex;
@@ -26,9 +27,9 @@
 .Title {
   font-size: 2rem;
   color: blue;
-  font-weight: 600;
+  font-weight: 500;
   cursor: default;
-  margin-right: 750px;
+  margin-right: 760px;
   text-decoration: none;
 }
 
@@ -72,6 +73,84 @@
 
 .Navbar.sticky .darkMode {
   color: #03045e;
+}
+
+@media screen and (max-width: 768px) {
+  .Navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    padding: 1.5rem 7%;
+    background: #03045e;
+    display: flex;
+    align-items: center;
+    z-index: 100;
+    text-decoration: none;
+    transition: background-color 0.5s, box-shadow 0.5s transform 0.3s ease;
+  }
+  .Navbar.sticky {
+    background: #023e8a;
+    box-shadow: 0 0.1rem 0.1rem blue;
+    transform: translateY(0);
+  }
+
+  .Navbar.sticky.scrolled {
+    background-color: #023e8a;
+    transition: background-color 0.3s ease transform 0.3s ease;
+  }
+
+  .Title {
+    font-size: 1rem;
+    color: blue;
+    font-weight: 400;
+    cursor: default;
+    margin-right: 50px;
+    text-decoration: none;
+  }
+
+  .Navbarlink a {
+    position: relative;
+    font-size: 1.2rem;
+    color: white;
+    font-weight: 500;
+    margin-right: 1rem;
+    text-decoration: none;
+  }
+
+  .Navbar.sticky .Navbarlink a {
+    color: #03045e;
+  }
+
+  .Navbar.sticky .Navbarlink a.active {
+    color: white;
+  }
+
+  .Navbarlink a.active::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 0.2rem;
+    background: #00b4d8;
+  }
+
+  .darkMode {
+    font-size: 1.5rem;
+    color: white;
+    cursor: pointer;
+  }
+
+  .Navbar.sticky {
+    background-color: #00b4d8;
+    box-shadow: 0 0.1rem 0.1rem blue;
+  }
+
+  .Navbar.sticky .darkMode {
+    color: #03045e;
+  }
 }
 
 section {
@@ -227,6 +306,152 @@ section {
 
 span {
   color: blue;
+}
+
+@media screen and (max-width: 768px) {
+  section {
+    min-height: 75vh;
+    padding: 10rem 7% 2rem;
+  }
+
+  .banner {
+    display: flex;
+    align-items: center;
+  }
+
+  .banner {
+    display: flex;
+    align-items: center;
+  }
+
+  .banner .banner-content {
+    max-width: 30rem;
+  }
+
+  .banner-content h3 {
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 0;
+    color: #03045e;
+  }
+
+  .banner-content h1 {
+    font-size: 2.8rem;
+    font-weight: 700;
+    margin-bottom: 0.1rem;
+    color: #023e8a;
+  }
+
+  .banner-content p {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #0077b6;
+  }
+
+  .social a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    background: transparent;
+    border: 0.1rem solid #00b4d8;
+    border-radius: 50%;
+    box-shadow: 0 0.2rem 0.5rem#023e8a;
+    font-size: 2rem;
+    color: #00b4d8;
+    margin: 1rem 1rem 2rem 0.8rem;
+  }
+
+  .social a:hover {
+    background-color: #023e8a;
+    color: white;
+    transition: 0.5s ease;
+  }
+
+  .btn {
+    text-decoration: none;
+    display: inline-block;
+    padding: 1.2rem 2.8rem;
+    background-color: #023e8a;
+    border-radius: 0.6rem;
+    box-shadow: 0 0.2rem 0.5rem #00b4d8;
+    font-size: 1.2rem;
+    color: #00b4d8;
+    letter-spacing: 0.1rem;
+    font-weight: 600;
+    border: 0.2rem solid transparent;
+    transition: 0.5s ease;
+    margin-left: 90px;
+  }
+
+  .btn:hover {
+    background: transparent;
+    color: #00b4d8;
+    border-color: blue;
+  }
+
+  .banner .work-container {
+    display: none;
+  }
+
+  .banner .work-container .work-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 768px;
+    height: 768px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .banner .work-container .work-box .work {
+    position: absolute;
+    left: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: #023e8a;
+    transform: rotate(calc(360deg / 4 * var(--i)));
+    transform-origin: 384px;
+    background: white;
+    padding: 10px 0;
+  }
+
+  .banner .work {
+    font-size: 1.3rem;
+    line-height: 1;
+    font-weight: 600;
+  }
+
+  .banner .circle {
+    width: 560px;
+    height: 560px;
+    border: 3px solid #03045e;
+    border-radius: 50%;
+  }
+
+  .banner .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-top: 384px solid #03045e;
+    border-right: 384px solid #0077b6;
+    border-bottom: 384px solid #00b4d8;
+    border-left: 384px solid transparent;
+  }
+
+  .banner-img img {
+    display: none;
+  }
+
+  span {
+    color: blue;
+  }
 }
 
 .about-me {
@@ -529,7 +754,7 @@ span {
   font-weight: 600;
   border: 0.2rem solid transparent;
   transition: 0.5s ease;
-  margin-left: 580px;
+  margin-left: 250px;
 }
 
 .btn-contact:hover {
@@ -574,7 +799,7 @@ span {
     width: 200px;
   }
   .btn-contact {
-    margin-left: 150px;
+    margin-left: 20px;
   }
 }
 
@@ -619,3 +844,9 @@ span {
 .legal {
   color: #03045e;
 }
+
+/* CSS PER SCHERMI PICCOLI */
+
+/* NAVBAR */
+
+/* BANNER */
