--- a/src/App.css
+++ b/src/App.css
@@ -118,10 +118,10 @@
 
   .Navbarlink a {
     position: relative;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: white;
     font-weight: 500;
-    margin-right: 1rem;
+    margin-right: 0.8rem;
     text-decoration: none;
   }
 
@@ -346,6 +346,7 @@ span {
     font-weight: 700;
     margin-bottom: 0.1rem;
     color: #023e8a;
+    margin-top: 0;
   }
 
   .banner-content p {
@@ -358,15 +359,15 @@ span {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
     background: transparent;
     border: 0.1rem solid #00b4d8;
     border-radius: 50%;
     box-shadow: 0 0.2rem 0.5rem#023e8a;
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: #00b4d8;
-    margin: 1rem 1rem 2rem 0.8rem;
+    margin: 1rem 0.5rem 1rem 0.8rem;
   }
 
   .social a:hover {
@@ -378,7 +379,7 @@ span {
   .btn {
     text-decoration: none;
     display: inline-block;
-    padding: 1.2rem 2.8rem;
+    padding: 1rem 2rem;
     background-color: #023e8a;
     border-radius: 0.6rem;
     box-shadow: 0 0.2rem 0.5rem #00b4d8;
@@ -388,7 +389,8 @@ span {
     font-weight: 600;
     border: 0.2rem solid transparent;
     transition: 0.5s ease;
-    margin-left: 90px;
+    margin-left: 65px;
+    margin-top: 20px;
   }
 
   .btn:hover {
@@ -678,8 +680,8 @@ span {
     align-items: center;
     flex-wrap: wrap;
     gap: 5rem;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .services-box {
@@ -801,7 +803,7 @@ span {
   width: 100%;
   height: 100%;
   background: linear-gradient(rgba (0, 0, 0, 0.1), red);
-  color: white;
+  color: wheat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -812,17 +814,21 @@ span {
 }
 
 .progetti-box:hover .progetti-layer {
-  opacity: 1;
+  opacity: 5;
 }
 
 .progetti-layer h4 {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   margin-bottom: 0;
+  color: #03045e;
 }
 
 .progetti-layer p {
   font-size: 1rem;
   margin-top: 0;
+
+  color: white;
+  font-weight: 900;
 }
 
 .progetti-layer a {
@@ -844,7 +850,33 @@ span {
   }
   .heading-progect {
     font-size: 2rem;
-    margin-right: 190px;
+    margin-right: 110px;
+  }
+  .progetti-layer h4 {
+    font-size: 1.3rem;
+    margin-bottom: 0;
+    color: #03045e;
+  }
+
+  .progetti-layer p {
+    font-size: 0.8rem;
+    margin-top: 0;
+
+    color: white;
+    font-weight: 900;
+  }
+  .progetti-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.2rem;
+    height: 2.2rem;
+    color: #023e8a;
+    background: white;
+    border-radius: 50%;
+    font-size: 1.8rem;
+    margin-right: 15px;
+    margin-bottom: 20px;
   }
 }
 
@@ -1021,8 +1053,8 @@ span {
     padding: 0.5rem;
     border-radius: 2rem;
     box-shadow: 0 0.2rem 0.5rem #00b4d8;
-    margin-left: 380px;
-    margin-top: 60px;
+    margin-left: 300px;
+    margin-top: 200px;
   }
   .Socials a {
     font-size: 18px;
