--- a/src/App.css
+++ b/src/App.css
@@ -859,7 +859,7 @@ span {
   }
 
   .progetti-layer p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     margin-top: 0;
 
     color: white;
@@ -876,7 +876,7 @@ span {
     border-radius: 50%;
     font-size: 1.8rem;
     margin-right: 15px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
   }
 }
 
@@ -1035,7 +1035,7 @@ span {
   .footer {
     position: relative;
     width: 86%;
-    height: 50vh;
+    height: 60vh;
     overflow: hidden;
   }
 
@@ -1057,19 +1057,20 @@ span {
     margin-top: 20px;
   }
   .Socials a {
-    font-size: 18px;
-    color: white;
+    font-size: 23px;
+    color: #023e8a;
     margin-right: 10px;
+
     transition: 0.5s ease;
   }
 
   .Socials a:hover {
-    font-size: 25px;
+    font-size: 28px;
     color: #03045e;
   }
 
   .legal {
-    font-size: 15px;
+    font-size: 12px;
     color: #03045e;
   }
 }
